traces/bug_696.txt
examples++-load/medit.cpp:1582: error: DEAD_STORE
  The value written to &wait (type _Bool) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:1582:17: Write of unused value
1580.     // rajout pour wait
1581.     bool wait=TheWait;
1582.     if (nargs[3]) wait= GetAny<bool>((*nargs[3])(stack));
                        ^
1583.     
1584.     bool plotting = true;   
